[package]
name = "account-address"
description = "Wrapper type for serializing Move account addresses as strings."
version = "0.2.0"
homepage = "https://moving.wtf"
repository = "https://github.com/movingco/bj"
authors = ["Ian Macalinao <ian@moving.wtf>"]
license = "Apache-2.0"
edition = "2021"

[features]
default = []
address20 = ["move-core-types/address20"]
address32 = ["move-core-types/address32"]

[dependencies]
anyhow = "1"
move-core-types = { version = "0.2.1", package = "mv-core-types" }
schemars = "0.8"
serde = "1.0.137"

[dev-dependencies]
serde_json = "1.0.83"
