[package]
name = "bj-completions"
description = "Bash completions for the bj CLI."
version = "0.1.3"
homepage = "https://moving.wtf"
repository = "https://github.com/movingco/bj"
authors = ["Ian Macalinao <ian@moving.wtf>"]
license = "Apache-2.0"
edition = "2021"

[features]
default = []
address20 = ["bj/address20"]
address32 = ["bj/address32"]

[dependencies]
anyhow = "1"
bj = { version = "0.1.1", path = "../bj" }
clap = { version = "3.1.18", features = ["derive"] }
clap_complete = "3.1.4"
