[package]
name = "bj"
description = "A CLI for converting BCS-encoded messages into JSON."
version = "0.2.2"
homepage = "https://moving.wtf"
repository = "https://github.com/movingco/bj"
authors = ["Ian Macalinao <ian@moving.wtf>"]
license = "Apache-2.0"
edition = "2021"
readme = "../../README.md"

[features]
default = []
address20 = ["errmap/address20", "move-core-types/address20"]
address32 = ["errmap/address32", "move-core-types/address32"]

[dependencies]
anyhow = "1"
bcs = "0.1.3"
clap = { version = "3.1.18", features = ["derive"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.81"
errmap = { version = "0.2.0", path = "../errmap" }
# Contains all of the BCS data we may deserialize
move-core-types = { version = "0.3.1", package = "mv-core-types" }
