[package]
name = "errmap"
description = "Move error map which can be represented as JSON."
version = "0.2.0"
homepage = "https://moving.wtf"
repository = "https://github.com/movingco/bj"
authors = ["Ian Macalinao <ian@moving.wtf>"]
license = "Apache-2.0"
edition = "2021"

[features]
default = []
address20 = ["module-id/address20", "move-core-types/address20"]
address32 = ["module-id/address32", "move-core-types/address32"]

[dependencies]
module-id = { version = "0.2.0", path = "../module-id" }
move-core-types = { version = "0.2.1", package = "mv-core-types" }
serde = "1.0.143"

[dev-dependencies]
serde_json = "1.0.81"
