[package]
name = "module-id"
description = "Wrapper type for serializing Move module IDs as strings."
version = "0.2.2"
homepage = "https://moving.wtf"
repository = "https://github.com/movingco/bj"
authors = ["Ian Macalinao <ian@moving.wtf>"]
license = "Apache-2.0"
edition = "2021"

[features]
default = []
address20 = ["move-core-types/address20", "account-address/address20"]
address32 = ["move-core-types/address32", "account-address/address32"]

[dependencies]
account-address = { version = "0.2.0", path = "../account-address" }
anyhow = "1"
move-core-types = { version = "0.3.1", package = "mv-core-types" }
schemars = "0.8"
serde = "1.0.144"

[dev-dependencies]
serde_json = "1.0.81"
