[package]
name = "struct-tag"
description = "Wrapper type for serializing Move struct tags as strings."
version = "0.2.2"
homepage = "https://moving.wtf"
repository = "https://github.com/movingco/bj"
authors = ["Ian Macalinao <ian@moving.wtf>"]
license = "Apache-2.0"
edition = "2021"

[features]
default = []
address20 = ["move-core-types/address20", "module-id/address20"]
address32 = ["move-core-types/address32", "module-id/address32"]

[dependencies]
anyhow = "1"
move-core-types = { version = "0.3.1", package = "mv-core-types" }
module-id = { version = "0.2.0", path = "../module-id" }
serde = "1.0.146"
schemars = "0.8"

[dev-dependencies]
serde_json = "1.0.81"
